# notification-service

./: .claude.md  .dockerignore  .env.example  .gitignore  .kube-linter.yaml  .pre-commit-config.yaml  .pre-commit-setup.md  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  manage.py  osv-scanner.toml  pyproject.toml  run_local.py  start_server.py
.beads/: issues.jsonl  metadata.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml  pull_request_template.md  renovate.json5
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml  security_vulnerability.yml  task.yml
.github/workflows/: ci.yml  cleanup.yml  codeql.yml  coverage.yml  dependabot-auto-merge.yml  greet.yml  license-check.yml  links.yml  lock.yml  pr-labeler.yml  pr-size.yml  security.yml
core/: __init__.py  admin.py  apps.py  constants.py.bak  models.py  pagination.py  tests.py  urls.py  views.py
core/auth/: __init__.py  context.py  oauth2.py
core/config/: downstream_urls.py
core/constants/: __init__.py  http.py  templates.py
core/enums/: __init__.py  difficulty_level.py  health_status.py  notification.py  user_role.py
core/exceptions/: __init__.py  downstream_exceptions.py  handlers.py
core/jobs/: email_jobs.py
core/logging/: __init__.py  config.py  context.py  filters.py  processors.py
core/management/commands/: runlocal.py
core/middleware/: __init__.py  process_time.py  rate_limit.py  request_id.py  security_context.py  security_headers.py
core/migrations/: __init__.py
core/models/: __init__.py  notification.py  notification_status.py  review.py  user.py  user_follow.py
core/repositories/: __init__.py  user_repository.py
core/schemas/: __init__.py  base_schema_model.py
core/schemas/health/: __init__.py  dependency_health.py  liveness_response.py  readiness_response.py
core/schemas/health/response/: __init__.py  liveness_response.py  readiness_response.py
core/schemas/notification/: __init__.py  batch_notification_response.py  date_range.py  failed_notifications_breakdown.py  mention_request.py  new_follower_request.py  notification_create.py  notification_created.py  notification_delivery_status.py  notification_detail.py  notification_list.py  notification_list_response.py  notification_stats.py  password_reset_request.py  recipe_commented_request.py  recipe_liked_request.py  recipe_published_request.py  retry_statistics.py  status_breakdown.py  template_info.py  welcome_request.py
core/schemas/notification/request/: email_changed_request.py  maintenance_request.py  (+15 more)
core/schemas/recipe/: __init__.py  collection_dto.py  comment_dto.py  recipe_dto.py
core/schemas/user/: __init__.py  user_base.py  user_detail.py  user_profile_response.py  user_search_result.py
core/services/: __init__.py  admin_service.py  database_monitor.py  email_service.py  health_service.py  notification_service.py  notification_templates.py  oauth2_client.py  recipe_notification_service.py  social_notification_service.py  system_notification_service.py  user_notification_service.py
core/services/downstream/: __init__.py  base_downstream_client.py  media_management_service_client.py  recipe_client.py  recipe_management_service_client.py  user_client.py
core/signals/: __init__.py  user_signals.py
docs/: openapi.yaml
docs/testing/: COMPONENT-TESTING.md  DEPENDENCY-TESTING.md  PERFORMANCE-TESTING.md  TESTING.md  UNIT-TESTING.md
k8s/: configmap-template.yaml  deployment.yaml  gateway-route.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  secret-template.yaml  service.yaml
notification_service/: __init__.py  asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
scripts/containerManagement/: cleanup-container.sh  deploy-container.sh  get-container-status.sh  start-container.sh  stop-container.sh  update-container.sh
templates/emails/: base.html  email_changed.html  maintenance.html  mention.html  new_follower.html  notification.html  password_changed.html  password_reset.html  recipe_author_share_notification.html  recipe_collected.html  recipe_commented.html  recipe_featured.html  recipe_liked.html  recipe_published.html  recipe_rated.html  recipe_shared.html  recipe_trending.html  welcome.html
tests/: base.py  conftest.py  run_tests.py
tests/component/: mocks.py  test_email_changed_endpoint.py  test_health_endpoint.py  test_maintenance_endpoint.py  test_mention_endpoint.py  test_new_follower_endpoint.py  test_notification_detail_endpoint.py  test_notification_retry_status_endpoint.py  test_notification_stats_endpoint.py  test_password_changed_endpoint.py  test_password_reset_endpoint.py  test_recipe_collected_endpoint.py  test_recipe_commented_endpoint.py  test_recipe_featured_endpoint.py  test_recipe_liked_endpoint.py  test_recipe_published_endpoint.py  test_recipe_rated_endpoint.py  test_recipe_shared_endpoint.py  test_recipe_trending_endpoint.py  test_retry_failed_notifications_endpoint.py  test_retry_notification_endpoint.py  test_share_recipe_endpoint.py  test_template_list_endpoint.py  test_user_notifications_endpoint.py  test_welcome_endpoint.py
tests/component/middleware/: __init__.py  test_middleware_integration.py
tests/dependency/: test_health_endpoint.py
tests/factories/: __init__.py
tests/fixtures/: sample_notifications.json
tests/performance/: locustfile_notifications.py
tests/performance/common/: __init__.py
tests/unit/: test_admin_service.py  test_app_config.py  test_health_endpoint.py  test_infrastructure.py  test_run_local.py  test_runner.py  test_settings.py  test_start_server.py  test_urls.py
tests/unit/core/: test_models.py  test_notification_model.py  test_user_repository.py  test_views.py
tests/unit/exceptions/: __init__.py  test_handlers.py
tests/unit/middleware/: test_process_time.py  test_rate_limit.py  test_request_id.py  test_security_headers.py
tests/unit/notification_service/: test_asgi.py  test_wsgi.py
(+26 files in other folders)
