[project]
name = "notification-service"
version = "0.1.0"
description = "Notification service API for recipe web app"
authors = [
    {name = "jsamuelsen",email = "jsamuelsen11@gmail.com"}
]
readme = "README.md"
requires-python = "~3.14"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]


[tool.poetry.scripts]
local = "run_local:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
